<resources>
    <string name="app_name">Меню Навигации</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Черкасов Дмитрий</string>
    <string name="nav_header_subtitle">mail@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_SMS">Share by SMS</string>
    <string name="about_me">О разработчике</string>
    <string name="form_callback">Форма обратной связи</string>
    <string name="search">Поиск</string>
    <string name="help">Поддержка</string>
    <string name="fast_question">ЧАВО</string>
    <string name="weather">Погода</string>
    <string name="text_about_sensor">Показания датчиков твоего телефона:</string>
    <string name="text_name_akkerman">Расчет функции Аккермана:</string>
</resources>
