<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/weather"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/weather" />
        <item
            android:id="@+id/Akkerman"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="Расчет функции Аккермана"/>
    </group>

    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/about_me"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/about_me" />
            <item
                android:id="@+id/callback_icon"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/form_callback" />
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_btn_speak_now"
                android:title="@string/fast_question" />
        </menu>
    </item>

</menu>
